build(web): add `VITE_BASE_PATH` environment variable
Introduce `VITE_BASE_PATH` to support custom base paths. This enhances deployment flexibility for apps served under subdirectories.

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -31,3 +31,7 @@ VITE_FC_BUTTON="Open App"
 VITE_FC_LAUNCH_URL="http://localhost:5173"
 VITE_FC_SPLASH_ICON="/favicon.ico"
 VITE_FC_SPLASH_BG="#000000"
+
+# Base path for serving the app (must end with a slash)
+# Example: "/subfolder/" when deploying under https://example.com/subfolder/
+VITE_BASE_PATH="/"
