chore(web): update splash configurations in `.env.example`
Replace splash icon and background color for enhanced aesthetics. This improves visual consistency across the app's user interface.

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -29,8 +29,8 @@ VITE_OG_IMAGE="/og.png"
 VITE_FC_IMAGE="/og.png"
 VITE_FC_BUTTON="Open App"
 VITE_FC_LAUNCH_URL="http://localhost:5173"
-VITE_FC_SPLASH_ICON="/favicon.ico"
-VITE_FC_SPLASH_BG="#000000"
+VITE_FC_SPLASH_ICON="/splash.png"
+VITE_FC_SPLASH_BG="#f6e6ee"
 
 # Base path for serving the app (must end with a slash)
 # Example: "/subfolder/" when deploying under https://example.com/subfolder/
