chore(web): update absolute URLs in `.env.example`
Ensure all URLs in `.env.example` use absolute paths for consistency. This prevents issues when the environment variables are used in different contexts.

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -23,13 +23,13 @@ VITE_WC_PROJECT_ID=""
 VITE_SITE_TITLE="Lil Nouns ENS"
 VITE_SITE_DESCRIPTION="Claim subnames under lilnouns.eth"
 VITE_SITE_URL="http://localhost:5173"
-VITE_OG_IMAGE="/og.png"
+VITE_OG_IMAGE="http://localhost:5173/og.png" # absolute URL required
 
 # Farcaster Frame metadata (optional)
-VITE_FC_IMAGE="/og.png"
+VITE_FC_IMAGE="http://localhost:5173/og.png" # absolute URL required
 VITE_FC_BUTTON="Open App"
 VITE_FC_LAUNCH_URL="http://localhost:5173"
-VITE_FC_SPLASH_ICON="/splash.png"
+VITE_FC_SPLASH_ICON="http://localhost:5173/splash.png" # absolute URL required
 VITE_FC_SPLASH_BG="#f6e6ee"
 
 # Base path for serving the app (must end with a slash)
