--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lilnouns-ens",
   "version": "1.0.0-alpha.26",
   "private": true,
+  "type": "module",
   "description": "Monorepo for Lil Nouns ENS: web dApp, contracts, and shared UI.",
   "keywords": [],
   "license": "Apache-2.0",
