--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lilnouns-ens",
-  "version": "1.0.0-alpha.34",
+  "version": "1.0.0-beta.0",
   "private": true,
   "type": "module",
   "description": "Monorepo for Lil Nouns ENS: web dApp, contracts, and shared UI.",
