ci(workflows): update deployment URL assignment logic
Adjusted the deployment workflow to correctly display `PINME_URL` as the preview URL and mark the production URL as unavailable. This improves clarity in deployment summaries and reduces potential confusion.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -214,8 +214,8 @@ jobs:
             echo "### Deployment Summary — PinMe"
             echo "- App: apps/web"
             echo "- Environment: $ENVIRONMENT"
-            echo "- Production URL: $PINME_URL"
-            echo "- Preview/PR URL: Not available"
+            echo "- Production URL: Not available"
+            echo "- Preview/PR URL: $PINME_URL"
             echo "- Branch: $BRANCH"
             echo "- Commit: $SHORT_SHA"
             echo "- PR: $PR_NUMBER"
